--- a/app/views/admin/dashboard/show.html.erb
+++ b/app/views/admin/dashboard/show.html.erb
@@ -1,2 +1,16 @@
-<h1>Admin::Dashboard#show</h1>
-<p>Find me in app/views/admin/dashboard/show.html.erb</p>
+<header class="page-header">
+  <h1>Admin Dashboard</h1>
+</header>
+
+<div class="list-group">
+  <a href="/admin/products" class="list-group-item">
+    <span class="badge"><%= @products_count %>
+    </span>
+    Total Products
+  </a>
+  <a href="/admin/categories" class="list-group-item">
+    <span class="badge"><%= @catagories_count %>
+    </span>
+    Total Categories
+  </a>
+</div>
