--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -48,11 +48,12 @@
           <% end %>
         </li>
         <li>
-          <span><% if current_user %>
-          Signed in as <%= current_user.name %> | <%= link_to "Logout", '/logout' %>
-          <% else %>
-          <%= link_to 'Login', '/login' %> | <%= link_to 'Signup', '/signup' %>
-          <% end %>
+          <span>
+            <% if current_user %>
+            <%= current_user.name %> | <%= link_to "Logout", '/logout' %>
+            <% else %>
+            <%= link_to 'Login', '/login' %> | <%= link_to 'Signup', '/signup' %>
+            <% end %>
           </span>
         </li>
       </ul>
