--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -48,13 +48,11 @@
           <% end %>
         </li>
         <li>
-          <span>
-            <% if current_user %>
-            <%= current_user.name %> | <%= link_to "Logout", '/logout' %>
-            <% else %>
-            <%= link_to 'Login', '/login' %> | <%= link_to 'Signup', '/signup' %>
-            <% end %>
-          </span>
+          <% if current_user %>
+            <span class="navbar-text"><%= current_user.name %> | <%= link_to "Logout", '/logout'%></span>
+          <% else %>
+            <span class="navbar-text"><%= link_to 'Login', '/login' %> | <%= link_to 'Signup', '/signup'%></span>
+          <% end %>
         </li>
       </ul>
     </div>
